Image path edit

--- a/jade/_content.jade
+++ b/jade/_content.jade
@@ -65,7 +65,7 @@ mixin aanbod()
 		.aanbod__content
 			.aanbod__logo.imgc: img(src="img/kpn-logo-280x118px.png")
 			h3.aanbod__header Tijdelijk aanbod#[span.colon :]
-				img(src="../img/kpn-egg-ff9900-300x273px.png" width="100%")
+				img(src="img/kpn-egg-ff9900-300x273px.png" width="100%")
 			ul.aanbod__list
 				li.aanbod__item.aanbod__item--1st.aanbod__item--xs Gratis apparatuur en installatie #[br.h-ls](ter waarde van &euro;&nbsp;600,-)
 				li.aanbod__item.aanbod__item--2nd.aanbod__item--xs Eerste halfjaar &euro; 25,- per maand #[br.h-ls](daarna &euro;&nbsp;50,- p.m.)
